[metadata]
name = example-pkg-tanvi-moharir
version = 0.0.1
author = tanvi moharir
author_email = tanvimoharir@gmail.com
description = a small package example
long_desrciption = file:README.md
long_description_content_type = text/markdown
url = https://github.com/tanvimoharir/packaging-tutorial
classifiers = 
	Programming Language :: Python :: 3
	License :: OSI Approved :: MIT License
	Operating System :: OS Independent

[options]
package_dir =
	= src
packages = find:
python_requires = >=3.6

[options.packages.find]
where=src
